# homm3-hero-view

./: .gitignore  Cargo.toml  build_web.sh
.devcontainer/: devcontainer.json
resources/: hps004pl.b64  hps004pl.hex  spec_djini.b64
resources/skill/: luck_1.b64
src/: backend.rs  backpack.rs  character.rs  edit_views.rs  geometry.rs  hero.rs  hero_viewer.rs  init.sql  init2.sql  lib.rs  main.rs  skill.rs  spec.rs  static_assets.rs  unit.rs  utils.rs  widgets.rs
