[package]
name = "homm3_hero_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
rfd = "0.6"
image = "0.23"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = "1"

[lib]
crate-type = ["cdylib", "rlib"]
