[package]
name = "last_minute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
image = "0.23"
tokio = "1"
parking_lot = "0.11"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
